Update view text blur

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="set_threshold_dialog_text_hint">Threshold range 0–1, recommended threshold 0.915</string>
     <string name="set_threshold_dialog_confirm">Sure</string>
     <string name="set_threshold_dialog_hint">Please enter a threshold</string>
+<!--    <string name="blur_true">Not blur detector</string>-->
+<!--    <string name="blur_false">Blur detector</string>-->
 </resources>
